# IdleInvent

./: .gitattributes  .gitignore  CppCheckOut.csv  CppCheckOut.txt  build.gradle  gradle.properties  settings.gradle
IdleInvent/src/main/cpp/: CMakeLists.txt
Native/src/: .clang-format  CMakeLists.txt
Native/src/Core/: CMakeLists.txt
Native/src/CoreTest/: CMakeLists.txt
Native/src/InventLIbTest/: CMakeLists.txt
Native/src/InventLIbTest/inc/: CommonTest.h  TestGameState.h
Native/src/InventLIbTest/src/: Game.test.cpp  Main.cpp
Native/src/InventLib/: CMakeLists.txt  Ideas.txt
Native/src/InventLib/src/: EntryPoint.cpp
Source/: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json  Ideas.txt
Source/CMake/: AndroidPackaging-Prerequisites.cmake  AndroidPackaging.cmake
Source/CMake/AndroidPackaging.template/: build.gradle.in  gradle.properties.in
Source/Engine/: CMakeLists.txt
Source/Engine/inc/: Engine.h  EngineState.h  FileSystem.h  Game.h
Source/Engine/inc/Animation/: Animation.h
Source/Engine/inc/Constexpr/: ConstexprMath.h  ConstexprSaveUtils.h  ConstexprStrUtils.h
Source/Engine/inc/DesignPatterns/: PubSub.h  ServiceLocator.h  Tree.h
Source/Engine/inc/GameState/: FileOperation.h  GameState.h  GameTime.h
Source/Engine/inc/Instrumentation/: ISink.h  Logging.h
Source/Engine/inc/Inventory/: Inventory.h  Item.h  ItemQuality.h
Source/Engine/inc/Manage/: EventManager.h  TickManager.h
Source/Engine/inc/Mechanics/: Accumulator.h  Achievement.h  Advancement.h  Effect.h  EventManager.h  Modifier.h  Progression.h  Purchasable.h  RandomEvent.h  Sale.h  ScaleFunc.h  Unlockable.h  Upgrade.h
Source/Engine/inc/Resources/: Resource.h  ResourceConversion.h  ResourceConverters.h  Storage.h
Source/Engine/inc/Settings/: PurchaseAmount.h
Source/Engine/inc/Utilities/: Concepts.h  EnumUtils.h  Handle.h  IRandom.h  TypeUtils.h
Source/Engine/src/: Engine.cpp
Source/Engine/src/Animation/: Animation.cpp
Source/Engine/src/Constexpr/: ConstexprStrUtils.cpp
Source/Engine/src/DesignPatterns/: PubSub.cpp
Source/Engine/src/GameState/: GameState.cpp
Source/Engine/src/Instrumentation/: ISink.cpp  Logging.cpp
Source/Engine/src/Manage/: EventManager.cpp  TickManager.cpp
Source/Engine/src/Mechanics/: Advancement.cpp  Effect.cpp  EventManager.cpp  Modifier.cpp  Progression.cpp  Purchasable.cpp  RandomEvent.cpp  Unlockable.cpp  Upgrade.cpp
Source/Engine/src/Resources/: Resource.cpp  ResourceConversion.cpp  Storage.cpp
Source/Engine/src/Settings/: PurchaseAmount.cpp
Source/Engine/src/Utilities/: Handle.cpp
Source/EngineTest/: CMakeLists.txt
Source/EngineTest/inc/: CommonTest.h  TestGameState.h
Source/EngineTest/src/Constexpr/: ConstexprMath.test.cpp  ConstexprSaveUtils.test.cpp  ConstexprStrUtils.test.cpp
Source/EngineTest/src/DesignPatterns/: PubSub.test.cpp  ServiceLocator.test.cpp  Tree.test.cpp
Source/EngineTest/src/Instrumentation/: DebugContext.test.cpp  Logging.test.cpp
Source/EngineTest/src/Manage/: EventManager.tests.cpp  TickManager.test.cpp
Source/EngineTest/src/Mechanics/: Advancement.tests.cpp  EventManager.tests.cpp  Progression.tests.cpp  Purchasable.test.cpp  ScaleFunc.tests.cpp  Upgrade.test.cpp
Source/EngineTest/src/Resources/: Resource.test.cpp
Source/EngineTest/src/Utilities/: Concepts.test.cpp  EnumUtils.test.cpp  Format.test.cpp  Handle.test.cpp  IRandom.test.cpp  TypeUtils.test.cpp
Source/Game/: CMakeLists.txt
Source/Game/src/: Main.cpp
Source/GhostHunterLib/: CMakeLists.txt  Readme.md
Source/GhostHunterLib/inc/: pch.h
Source/GhostHunterLib/inc/GhostHunter/: Constants.h  Formatting.h  GhostHunterGame.h  GhostHunterResources.h  Locations.h  Media.h  Tools.h
Source/GhostHunterLib/inc/Quality/: Quality.h
Source/GhostHunterLib/src/: Formatting.cpp  GhostHunterGame.cpp  LocationDetails.cpp  Purchase.cpp  Sales.cpp  Upgrades.cpp
Source/GhostHunterLib/src/GameState/: Life.cpp
Source/GhostHunterLib/src/Inventory/: Inventory.cpp
Source/GhostHunterLib/src/Investigation/: Investigation.cpp
Source/GhostHunterLib/src/Locations/: Locations.cpp
Source/GhostHunterLib/src/Media/: Inventory.cpp  Market.cpp  Media.cpp
Source/GhostHunterLib/src/Quality/: Quality.cpp
Source/GhostHunterLib/src/Resources/: GhostHunterResources.cpp
Source/GhostHunterLib/src/Teams/: TeamMember.cpp
Source/GhostHunterLib/src/Tools/: ToolAccumulators.cpp  Tools.cpp  UseTool.cpp
Source/GhostHunterLib/src/UI/: BottomContent.cpp  MainContent.cpp  TopContent.cpp  Ui.cpp
Source/GhostHunterLibTest/: CMakeLists.txt
Source/GhostHunterLibTest/src/Media/: Market.Test.cpp
Source/InventLib/: CMakeLists.txt
Source/InventLib/inc/InventLib/: Constants.h  InventGame.h
Source/InventLib/src/: InventGame.cpp
Source/InventLib/src/Achievements/: Achievements.cpp  TimeAchievements.cpp
Source/InventLib/src/Character/: Death.cpp  GameCharacter.cpp  Life.cpp  RebirthBenefits.cpp  Society.cpp
Source/InventLib/src/Effects/: Effect.cpp
Source/InventLib/src/GameState/: InventGameState.cpp
Source/InventLib/src/Inventory/: Item.cpp
Source/InventLib/src/Projects/: Building.cpp  Expeditions.cpp  Population.cpp  Project.cpp  Research.cpp
Source/InventLib/src/RandomEvents/: InfluenceEvents.cpp  KnowledgeEvents.cpp  LaborEvents.cpp  MagicEvents.cpp  (+4 more)
Source/InventLibTest/: CMakeLists.txt
Source/InventLibTest/inc/: CommonTest.h  TestGameState.h
Source/InventLibTest/src/: Game.test.cpp  Main.cpp
Source/PetPyramidLib/: CMakeLists.txt
Source/PetPyramidLib/inc/: pch.h
Source/PetPyramidLib/src/: PetPyramidGame.cpp
Source/PetPyramidLibTest/: CMakeLists.txt
Source/PetPyramidLibTest/src/: Smoke.Test.cpp  main.cpp
Source/Platform/: CMakeLists.txt
Source/SampleUI/: CMakeLists.txt
Source/SampleUI/src/: Main.cpp  Ui.cpp
Source/TechMazeLib/: CMakeLists.txt  readme.md
Source/TechMazeLib/src/: Decoder.cpp  Finder.cpp  TechMazeGame.cpp  Technology.cpp
Source/Tools/: CMakeLists.txt
Source/Tools/Atlas/: CMakeLists.txt
Source/Ui/: CMakeLists.txt
Source/Ui/src/: Dialog.cpp  Overlay.cpp  Panel.cpp  TreePanel.cpp
(+423 files in other folders)
